--- a/MIST143_Traveler/Views/Home/ContactCenter.cshtml
+++ b/MIST143_Traveler/Views/Home/ContactCenter.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@using System.Text.Json;
+@inject IHttpContextAccessor Accessor
 @{
     ViewData["Title"] = "ContactCenter";
 }
@@ -47,14 +49,22 @@
                 <div class="row row-cols-md-3">
                     <div class="col">
                         <div class="card order" style="width: 18rem">
-                            <a href="@Url.Content("~/CustomerCenter/List")">
-                                <div class="card-body">
-                                    <img src="@Url.Content("~/images/contact/order1.png")" />
-                                    <h5 class="card-title">查詢訂單狀態</h5>
+                            @{var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
+                                var v = JsonSerializer.Deserialize<Member>(OBJ);
+                                @*<a href="@Url.Action("List","CustomerCenter",new {v.Email})">*@
+                                <a href="@Url.Action("List","CustomerCenter",new {v.MembersId})">
 
-                                    <!-- <a href="#" class="btn btn-warning">Go somewhere</a> -->
-                                </div>
-                            </a>
+                                    <div class="card-body">
+                                        <img src="@Url.Content("~/images/contact/order1.png")" />
+                                        <h5 class="card-title">查詢訂單狀態</h5>
+
+                                        <!-- <a href="#" class="btn btn-warning">Go somewhere</a> -->
+                                    </div>
+                                </a>
+
+                            }
+
+
                         </div>
                     </div>
                     <div class="col">
@@ -108,7 +118,7 @@
                             If You Have Any Query, Please Contact Us
                         </h1>
                     </div>
-                    
+
                 </section>
             </div>
         </div>
