--- a/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/ProductManage.cshtml
@@ -1,6 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "ProductManage";
+    Layout = null;
 }
 
 @section Styles{
@@ -9,6 +10,8 @@
 }
 <link href="~/css/客戶中心訂單內容物.css" rel="stylesheet" />
 <link href="~/css/客服中心.css" rel="stylesheet" />
+
+
 
 <body>
 
