--- a/MIST143_Traveler/Views/CustomerCenter/Order.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/Order.cshtml
@@ -47,12 +47,19 @@
                     @Html.DisplayFor(modelItem => item.OrderStatusId)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    
-                    @Html.ActionLink("刪除", "Delete","CustomerCenter", new { id = item.OrderId },
+                    @Html.ActionLink("刪除", "Delete", "CustomerCenter", new { id = item.OrderId, MemberId = item.MemberId },
                    new { onclick = "return confirm('確定要刪除?')" })
+                   
                 </td>
             </tr>
         }
     </tbody>
 </table>
+@section Scripts{ 
+    <script>
+
+
+    </script>
+
+}
+    
