--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -96,7 +96,7 @@
         act.value = "d555@gmail.com";
         pas.value = "a1234567";
     }
-
+        //登入開始
         const BtnLogin = () => {
            
         var postData = {
@@ -104,7 +104,7 @@
             Password: $("#Pas").val()
             };
             
-          
+          console.log(123)
             
         $.ajax({
             url: '@Url.Action("newLoginpag","CustomerCenter")',
@@ -120,7 +120,6 @@
                         text: datas.msg,
                         
                     })
-                    /*Swal.fire(datas.msg);*/
                     return;
                 }
                 
