--- a/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newLoginpag.cshtml
@@ -97,6 +97,8 @@
         pas.value = "a1234567";
     }
 
+        //登入開始
+
         const BtnLogin = () => {
            
         var postData = {
@@ -104,7 +106,9 @@
             Password: $("#Pas").val()
             };
             
-          
+
+          console.log(123)
+
             
         $.ajax({
             url: '@Url.Action("newLoginpag","CustomerCenter")',
@@ -120,7 +124,8 @@
                         text: datas.msg,
                         
                     })
-                    /*Swal.fire(datas.msg);*/
+
+
                     return;
                 }
                 
