--- a/MIST143_Traveler/Views/CustomerCenter/newList.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/newList.cshtml
@@ -1,6 +1,4 @@
-﻿@model MIST143_Traveler.Models.Member
-
-@*@model MIST143_Traveler.MViewModel.CMemberView*@
+﻿@model MIST143_Traveler.MViewModel.CMemberView
 
 @using Microsoft.AspNetCore.Http
 @using System.Text.Json;
@@ -9,7 +7,6 @@
 
 }
 <link href="~/css/客服中心.css" rel="stylesheet" />
-
 
 <link href="~/css/會員中心/會員中心左邊選項.css" rel="stylesheet" />
 
@@ -22,23 +19,13 @@
                     <div class="card" style="width: 18rem;">
                         <div>
                             <img src="@Url.Content("~/images/contact/大頭貼修改.png")" />
-
                         </div>
+                        <div class="card-body mb-3">
+                            <h5 class="card-title text-center">橘子</h5>
 
-
-
-                        <div>
-                            <div><button id="btncus" class="btn btn-outline-warning 按鈕顏色2 active 選單"><span class="bi bi-people 小圖示"></span>個人資訊</button></div>
-                            <div>@*@Html.ActionLink("個人資訊", "List", "CustomerCenter", null, new { @class = "list-group-item list-group-item-action active", aria_current = "true"  })*@</div>
-                            <div><button id="btnorder" class="btn btn-outline-warning 按鈕顏色2"><span class=" bi bi-bag 小圖示"></span>訂單管理</button></div>
-                            @*<div>@Html.ActionLink("訂單管理", "ProductManage", "CustomerCenter", null, new { @class = "list-group-item list-group-item-action" })</div>*@
-                            <div><button id="btnlove" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-heart 小圖示"></span>我的最愛</button></div>
-                            <div><button id="btnreview" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-chat-left-text 小圖示"></span>我的評論</button></div>
-                            <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-star 小圖示"></span>Star積分</button></div>
-                            <div><button id="btncop" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-wallet2 小圖示"></span>優惠票券</button></div>
+                            <input type="file" class="form-control" id="inputGroupFile02">
                         </div>
                     </div>
-
 
 
 
@@ -51,10 +38,10 @@
                         <div><button id="btnreview" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-chat-left-text 小圖示"></span>我的評論</button></div>
                         <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-star 小圖示"></span>Star積分</button></div>
                         <div><button id="btncop" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-wallet2 小圖示"></span>優惠票券</button></div>
-
                     </div>
+                </div>
 
-
+                <div id="cont" class="col-12 col-md-9">
 
                     <div class="row row-cols-1">
                         <div class="col 上面空間">
@@ -86,7 +73,7 @@
                         <div class="box_body d-flex  mb-2">
                             <div class="inputs p-2 ">
                                 <header>居住縣市</header>
-                                <select class="form-select" aria-label="Default select example" asp-for="CityId" id="CityId" name="CityName">
+                                <select class="form-select" aria-label="Default select example" asp-for="CityId" id="CityId" name="城市">
                                 </select>
                             </div>
 
@@ -121,7 +108,6 @@
 
 
             </div>
-
         </div>
     </article>
 </body>
@@ -129,7 +115,6 @@
 
 @section Scripts{
     <script>
-        const cont = document.querySelector("#cont")
         const Btnsave = document.querySelector("#send")
         const bb = () => {
 
@@ -178,7 +163,6 @@
            LoadCities()
 
 
-
         @{var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
                 var v = JsonSerializer.Deserialize<Member>(OBJ); }
         $('#btncus').click(function () {
@@ -193,33 +177,6 @@
              $('#btnorder').removeClass("active")
     })
 
-        @*$('#btnorder').click(function () {
-            $('#cont').load(
-            $.ajax({
-            url:'@Url.Action("Order","CustomerCenter",new {v.MembersId})',
-            method: 'Post',
-            dataType: 'int',
-            )
-        })*@
-        @*const btnord = document.querySelector("#btnorder")
-        btnord.addEventListener("click", async () => {
-            let response = await fetch('@Url.Action("Order","CustomerCenter",new {v.MembersId})')
-            let result = await response.json()
-            
-            let htmldatas = result.map(data => {
-                return (`<tr>${data[0]}</tr>`)
-            })
-            console.log(result)
-            
-            console.log(htmldatas[0])
-            cont.innerHTML = htmldatas
-        })*@
-
-        @*$('#btnorder').click(function () {
-            $.getJSON('@Url.Content("~/CustomerCenter/Order")', { "MembersId": "v.MembersId" }, function (datas) {
-                console.log(datas)
-            })
-        })*@
 
         $('#btnorder').click(function () {
         $('#cont').load('@Url.Action("Order","CustomerCenter",new {v.MembersId})')
@@ -275,8 +232,6 @@
 
 
 
-
     </script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 }
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
