--- a/MIST143_Traveler/Views/CustomerCenter/List.cshtml
+++ b/MIST143_Traveler/Views/CustomerCenter/List.cshtml
@@ -1,7 +1,5 @@
 ﻿@model MIST143_Traveler.Models.Member
-
 @*@model MIST143_Traveler.MViewModel.CMemberView*@
-
 @using Microsoft.AspNetCore.Http
 @using System.Text.Json;
 @inject IHttpContextAccessor Accessor
@@ -9,7 +7,6 @@
 
 }
 <link href="~/css/客服中心.css" rel="stylesheet" />
-
 
 <link href="~/css/會員中心/會員中心左邊選項.css" rel="stylesheet" />
 
@@ -22,23 +19,13 @@
                     <div class="card" style="width: 18rem;">
                         <div>
                             <img src="@Url.Content("~/images/contact/大頭貼修改.png")" />
-
                         </div>
+                        <div class="card-body mb-3">
+                            <h5 class="card-title text-center">橘子</h5>
 
-
-
-                        <div>
-                            <div><button id="btncus" class="btn btn-outline-warning 按鈕顏色2 active 選單"><span class="bi bi-people 小圖示"></span>個人資訊</button></div>
-                            <div>@*@Html.ActionLink("個人資訊", "List", "CustomerCenter", null, new { @class = "list-group-item list-group-item-action active", aria_current = "true"  })*@</div>
-                            <div><button id="btnorder" class="btn btn-outline-warning 按鈕顏色2"><span class=" bi bi-bag 小圖示"></span>訂單管理</button></div>
-                            @*<div>@Html.ActionLink("訂單管理", "ProductManage", "CustomerCenter", null, new { @class = "list-group-item list-group-item-action" })</div>*@
-                            <div><button id="btnlove" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-heart 小圖示"></span>我的最愛</button></div>
-                            <div><button id="btnreview" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-chat-left-text 小圖示"></span>我的評論</button></div>
-                            <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-star 小圖示"></span>Star積分</button></div>
-                            <div><button id="btncop" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-wallet2 小圖示"></span>優惠票券</button></div>
+                            <input type="file" class="form-control" id="inputGroupFile02">
                         </div>
                     </div>
-
 
 
 
@@ -51,10 +38,10 @@
                         <div><button id="btnreview" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-chat-left-text 小圖示"></span>我的評論</button></div>
                         <div><button id="btnstar" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-star 小圖示"></span>Star積分</button></div>
                         <div><button id="btncop" class="btn btn-outline-warning 按鈕顏色2"><span class="bi bi-wallet2 小圖示"></span>優惠票券</button></div>
-
                     </div>
+                </div>
 
-
+                <div id="cont" class="col-12 col-md-9">
 
                     <div class="row row-cols-1">
                         <div class="col 上面空間">
@@ -121,7 +108,6 @@
 
 
             </div>
-
         </div>
     </article>
 </body>
@@ -178,7 +164,6 @@
            LoadCities()
 
 
-
         @{var OBJ = Accessor.HttpContext.Session.GetString(CDictionary.SK_Login);//取得登入者的SESSION
                 var v = JsonSerializer.Deserialize<Member>(OBJ); }
         $('#btncus').click(function () {
@@ -205,12 +190,12 @@
         btnord.addEventListener("click", async () => {
             let response = await fetch('@Url.Action("Order","CustomerCenter",new {v.MembersId})')
             let result = await response.json()
-            
+
             let htmldatas = result.map(data => {
                 return (`<tr>${data[0]}</tr>`)
             })
             console.log(result)
-            
+
             console.log(htmldatas[0])
             cont.innerHTML = htmldatas
         })*@
@@ -271,7 +256,6 @@
             $('#btnstar').removeClass("active")
             $('#btncus').removeClass("active")
         })
-
 
 
 
